<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Spinner
        android:id="@+id/subject_spinner"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/lightGray"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/title_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"/>

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="@color/lightGray"
        android:hint="@string/title"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"/>

    <EditText
        android:id="@+id/date_edittext"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/lightGray"
        android:gravity="start"
        android:hint="@string/date_editText"
        android:inputType="date"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_edittext"
        app:layout_constraintStart_toStartOf="@+id/subject_spinner"
        app:layout_constraintTop_toTopOf="@+id/time_edittext"/>

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="@color/lightGray"
        android:gravity="start"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edittext" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/items" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_deadline_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/new_deadline"
        android:textColor="@color/dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/time_edittext"
        android:layout_width="184dp"
        android:layout_height="30dp"
        android:background="@color/lightGray"
        android:ems="10"
        android:hint="Время уведомления"
        android:inputType="time"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/title_edittext"
        app:layout_constraintEnd_toEndOf="@+id/title_edittext"
        app:layout_constraintTop_toBottomOf="@+id/subject_spinner"
        app:layout_constraintVertical_bias="0.718"/>

</androidx.constraintlayout.widget.ConstraintLayout>